# drone_uav_fusion_slam

./: .gitignore  README.md
week1_basic/ceres_demo/: CMakeLists.txt
week1_basic/ceres_demo/doc/: ceres_theory.md
week1_basic/ceres_demo/src/: 1_curve_fitting.cpp  2_robust_fitting.cpp  3_hand_eye_calib.cpp
week1_basic/eigen_demo/: CMakeLists.txt
week1_basic/eigen_demo/src/: geometry_math.cpp  geometry_math.h  imu_preintegrator.cpp  imu_preintegrator.h  main.cpp
week1_basic/icp_registration_demo/: CMakeLists.txt  package.xml
week1_basic/icp_registration_demo/doc/: icp_theory.md
week1_basic/icp_registration_demo/src/: 1_icp_pure_cpp.cpp  2_icp_voxel_filter.cpp  3_icp_ros_node.cpp
week1_basic/ros1_sensor_demo/: CMakeLists.txt  package.xml
week1_basic/ros1_sensor_demo/doc/: ros_theory.md
week1_basic/ros1_sensor_demo/msg/: CustomImu.msg  CustomPointCloud.msg
week1_basic/ros1_sensor_demo/src/: sensor_publisher.cpp  sync_node.cpp  tf_publisher.cpp
week2_lio_sam/imu_preintegration_demo/: CMakeLists.txt  package.xml
week2_lio_sam/imu_preintegration_demo/doc/: day8_notes.md
week2_lio_sam/imu_preintegration_demo/launch/: imu_preint_demo.launch
week2_lio_sam/imu_preintegration_demo/src/: imu_preintegration_node.cpp  imu_simulator.cpp
week2_lio_sam/loam_feature_demo/: CMakeLists.txt  package.xml
week2_lio_sam/loam_feature_demo/doc/: day7_notes.md
week2_lio_sam/loam_feature_demo/launch/: feature_icp_demo.launch
week2_lio_sam/loam_feature_demo/src/: feature_extraction.cpp  (+2 more)
week2_lio_sam/pcl_processing_demo/: CMakeLists.txt  package.xml
(+4 files in other folders)
